--- a/gb/16/10/2/n8358069.md
+++ b/gb/16/10/2/n8358069.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sxrssb2693/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sxrssb2693/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sxrssb2693/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sxrssb2693/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>带孩子去上班 维州雇主提供假期看护</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年10月02日讯】（大纪元记者杰妮墨尔本编译报导）无所事事的<ahref="https://github.com/sxrssb2693/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a><ahref="https://github.com/sxrssb2693/djy/blob/master/gb/tag/%E5%81%87%E6%9C%9F.md#1">假期</a>可能是每个孩子的美梦，可对很多家长来说，让孩子们快乐充实地度过假期，有时是一场噩梦。为了帮助家长，让员工安心工作，<ahref="https://github.com/sxrssb2693/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>一些公司提供了<ahref="https://github.com/sxrssb2693/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>假期活动安排。</p>
-<p>据《时代报》报导，这些学校<ahref="https://github.com/sxrssb2693/djy/blob/master/gb/tag/%E5%81%87%E6%9C%9F.md#1">假期</a>活动计划有些是由公司资助，有些则由家长付费。</p>
+<p>【大纪元2016年10月02日讯】（大纪元记者杰妮墨尔本编译报导）无所事事的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%87%E6%9C%9F.md#1">假期</a>可能是每个孩子的美梦，可对很多家长来说，让孩子们快乐充实地度过假期，有时是一场噩梦。为了帮助家长，让员工安心工作，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>一些公司提供了<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>假期活动安排。</p>
+<p>据《时代报》报导，这些学校<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%87%E6%9C%9F.md#1">假期</a>活动计划有些是由公司资助，有些则由家长付费。</p>
 <p>Nathan Jones和妻子一到学校放假就要给他们3个不到10岁的孩子找事做，他们在墨尔本没有亲戚，无法帮他们照顾小孩。</p>
 <p>各类假期活动或学校露营都花费不菲，而且接送时间与工作时间不同，Jones需要申请迟到或早退。</p>
 <p>2013年，他所在的公司Insurance Australia Group开始在其6个办事处提供假期子女看护计划。</p>
 <p>公司集团总经理Gillian Folkes说：“每年有12周的学校假期，大多数父母需要用掉4周的年假来照顾孩子，通常剩下1个月时间，要花钱找人看护，找家人、朋友帮忙或是放弃工资去照顾孩子。”</p>
 <p>该公司出钱聘请了Guardian Early Learning Group早教机构，为5至12岁的儿童提供看护服务，家长们如果愿意可以为每个孩子捐5澳元。孩子们可以参加远足活动，包括去电影院和博物馆，玩搏智桌面游戏等。</p>
-<p><ahref="https://github.com/sxrssb2693/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>儿童看护服务协助机构Community Child Care主管Leanne Giardina说，需要假期子女看护服务的家庭数量在增加，家长们需要这类帮助。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%B4%E5%B7%9E.md#1">维州</a>儿童看护服务协助机构Community Child Care主管Leanne Giardina说，需要假期子女看护服务的家庭数量在增加，家长们需要这类帮助。</p>
 <p>为多家公司提供学校假期课程的OSHClub主管Scott Bull说，在过去两年中，很多公司开始对假期计划感兴趣，以便员工们能够平衡好工作与生活，但公司需要有足够大的室内和室外空间来提供假期活动。</p>
 <p>YMCA青年会自2013年起为维州教育和培训厅（Department of Education and Training）的员工提供学校假期计划。一位发言人说，假期看护计划让员工们更开心，能帮助他们平衡家庭和生活。需要看护服务的员工也越来越多了。</p>
 <p>维州家长协会（Parents Victoria）会长Gail McHardy说，并不是所有父母都能找到帮他们看孩子的人，雇主们认识到提供学校假期计划对员工来说是一种帮助，可以减轻家长们的压力。</p>
@@ -23,42 +23,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/8/29/n8247109.md#1">维州课余看护服务私营化 家长付费更多</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/9/6/n8272247.md#1">维州育儿中心优劣榜</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/9/18/n8311826.md#1">维州将设独立仲裁机构解决校园纠纷</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/9/26/n8338274.md#1">澳新州学校放假 儿童看护服务短缺</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/9/26/n8339754.md#1">学校假期刚至 车祸何其多</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/9/27/n8340731.md#1">维州家庭抱怨公立学校学费上涨</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/9/27/n8340870.md#1">企业之手伸向维州校园 批评者吁严把关</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/9/27/n8341026.md#1">学校假期何处去墨尔本各种活动等着您</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/9/27/n8341090.md#1">维州学生转学多 专家吁家长慎考虑</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/6/n12006537.md#1">墨尔本房地产：拍卖转至线上 市场前景不明朗</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/29/n8247109.md#1">维州课余看护服务私营化 家长付费更多</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/6/n8272247.md#1">维州育儿中心优劣榜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/18/n8311826.md#1">维州将设独立仲裁机构解决校园纠纷</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/26/n8338274.md#1">澳新州学校放假 儿童看护服务短缺</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/26/n8339754.md#1">学校假期刚至 车祸何其多</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/27/n8340731.md#1">维州家庭抱怨公立学校学费上涨</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/27/n8340870.md#1">企业之手伸向维州校园 批评者吁严把关</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/27/n8341026.md#1">学校假期何处去墨尔本各种活动等着您</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/27/n8341090.md#1">维州学生转学多 专家吁家长慎考虑</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690233.md#1">【一线采访】中共文革式防疫 上海民怨沸腾</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/3/n9802518.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（下）</a></li><li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/9/14/n8301021.md#1" target="_blank">周向阳案辩词：为捍卫法律正义与真善忍而辩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045304.md#1" target="_blank">《苦菜花》人物原型的真实人生（4）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/5/n12004590.md#1">台疫情指挥中心：商店工作独居男感染源找到了</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12002313.md#1">【拍案惊奇】中共为粮荒辟谣 海南现女版李文亮</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12003209.md#1">【最新疫情4.5】英首相高烧不退 送医检查</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12003758.md#1">组图：忧疫情再爆发 北京市民抢购粮食</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12003547.md#1">病毒“精心设计”？台医生：半年前就担心会出事</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/3/n12000492.md#1">爱美也能吸金 郭书瑶从老主顾晋升代言人</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/3/n11999917.md#1">公园少女4月底回归乐坛 Soso因健康因素缺席</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/3/n12000869.md#1">黄明志隔离结束出关 赞大马防疫“公开透明”</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/3/n12001252.md#1">杜汶泽脸书贴图发文 爆呛中共掩盖疫情</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12003574.md#1">30岁维密超模染中共肺炎 时尚圈人心惶惶</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/1/n11994730.md#1">“中美相敬” 一个蒋中正逝世八年后才被宋美龄知道的秘密</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/1/n11994253.md#1">【命理】当我们算到自己的命不好时怎么办？</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/3/27/n11981509.md#1">高僧洞悉夙怨 慈悲化解恶缘</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/13/2/3/n3792283.md#1">米开朗基罗（3）化腐朽为神奇——《大卫像》</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/5/n12004356.md#1">疫情下纽约房东行善 免收几百名房客的租金</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sxrssb2693/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sxrssb2693/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/2/n8358069.htm">带孩子去上班 维州雇主提供假期看护</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/2/n8358069.htm">带孩子去上班 维州雇主提供假期看护</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sxrssb2693/djy/blob/master/gb/16/10/2/n8358069.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sxrssb2693/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sxrssb2693/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/10/2/n8358069.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
